# crustchan

./: .gitignore  .terraformignore  Readme.md  test-event.json
.github/workflows/: build.yaml  deployment.yaml  deployment.yaml.disabled
app/: .dockerignore  Cargo.toml  Dockerfile  Readme.md  test.html
app/src/: admin.rs  auth.rs  board.rs  dynamodb.rs  main.rs  model.rs  post.rs  rejections.rs  response.rs
app/src/admin/: handlers.rs  mod.rs  routes.rs
app/src/board/: handlers.rs  mod.rs  routes.rs
app/src/entrypoints/dynamodb/: mod.rs  model.rs
app/src/health/: handlers.rs  mod.rs  routes.rs
app/src/lib/: dynamodb.rs  lib.rs  rejections.rs  response.rs  utils.rs
app/src/lib/models/: admin.rs  board.rs  dynamodb.rs  mod.rs  post.rs
app/src/middleware/: mod.rs
app/src/openapi/: handlers.rs  mod.rs  routes.rs
app/src/post/: handlers.rs  mod.rs  routes.rs
app/static/api-docs/: swagger-initializer.js
terraform/: .terraform.lock.hcl  application.tf  ecs.sh  ecs.tf  github-actions.tf  iam.tf  lambda.tf  main.tf  ssh-key  ssh-key.pub  vars.tf  vpc.tf
