[package]
name = "crust-chan"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version="0.3", features = ["compression", "multipart", "websocket"]}
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = {version = "1.0.210", features = ["derive"]}
tracing-subscriber = {version="0.3.18", features = ["env-filter", "fmt", "json"]}
tracing = "0.1.40"
bytes = { version = "1.8.0", features = ["serde"] }
futures-util = "0.3.31"
uuid = {version="1.11.0", features=["v4"]}
chrono = "0.4.38"
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.51.0"
anyhow = "1.0.91"
serde_dynamo = { version = "4", features = ["rusoto_dynamodb+0_48"] }
serde_derive = "1.0.213"
image = "0.25.4"
rusoto_core = { version = "0.48", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.48", default-features = false, features = ["rustls"] }
serde_json = "1.0.132"

